Added alts to each image element

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="header1">
         <h2 id="aboutme">About Me...</h2>
         <div class="buttonbox">
-            <input onclick="change()" type="button" value="-" id="btn1"></input>
+            <input type="button" value="-" id="btn1"></input>
         </div>
     </section>
 
@@ -86,7 +86,7 @@
     <section class="header1" id="portfolio">
         <h2 id="aboutme">Portfolio</h2>
         <div class="buttonbox">
-            <input onclick="change()" type="button" value="-" id="btn2"></input>
+            <input type="button" value="-" id="btn2"></input>
         </div>
     </section>
 
@@ -100,7 +100,7 @@
                     <a href="https://sheltered-lake-23144.herokuapp.com/"
                         style="margin: 10px; text-decoration: none; width: 100%">
                         <section class="mainBorder formatSection bigger">
-                            <img class="formatImage" src=".\assets\images\onTrack.png">
+                            <img class="formatImage" src=".\assets\images\onTrack.png" alt="onTrack Image">
                             <h2 class="formatHeader">onTrack</h2>
                             <p class="formatHidden" id="box1">Track your construction Project by tracking scope &
                                 posting photos of completed work!</p>
@@ -113,7 +113,7 @@
                     <a href="https://cryptic-sands-14911.herokuapp.com/"
                         style="margin: 10px; text-decoration: none; width: 100%">
                         <section class="mainBorder formatSection bigger">
-                            <img class="formatImage" src=".\assets\images\techblog.png">
+                            <img class="formatImage" src=".\assets\images\techblog.png" alt="techBlog Image">
                             <h2 class="formatHeader">Tech Blog</h2>
                             <p class="formatHidden" id="box1">Link up with like minded coders. Post your Blog & let
                                 people comment while you help others aswell!</p>
@@ -132,7 +132,7 @@
                     <a href="https://syackzan.github.io/The-Degenerate/"
                         style="margin: 10px; text-decoration: none; width: 100%">
                         <section class="mainBorder formatSection">
-                            <img class="formatImage" src=".\assets\images\gambler.png">
+                            <img class="formatImage" src=".\assets\images\gambler.png" alt="Degenerate Image">
                             <h2 class="formatHeader">The Degenerate</h2>
                             <p class="formatHidden" id="box1">Want a place to quickly bet on a sport of your choice?
                                 Well click into "The Degenerate" to place a
@@ -146,7 +146,7 @@
                     <a href="https://syackzan.github.io/Weather-Dashboard/"
                         style="margin: 10px; text-decoration: none; width: 100%">
                         <section class="mainBorder formatSection">
-                            <img class="formatImage" src=".\assets\images\weatherDB.png">
+                            <img class="formatImage" src=".\assets\images\weatherDB.png" alt="Weather App Image">
                             <h2 class="formatHeader">Weather Dashboard</h2>
                             <p class="formatHidden" id="box1">Find the weather of any city in the United States via this
                                 application. Store your searchs for quick
@@ -160,7 +160,7 @@
                     <a href="https://syackzan.github.io/Day-Calendar/"
                         style="margin: 10px; text-decoration: none; width: 100%">
                         <section class="mainBorder formatSection">
-                            <img class="formatImage" src=".\assets\images\dayPlanner.png">
+                            <img class="formatImage" src=".\assets\images\dayPlanner.png" alt="DayPlanner Image">
                             <h2 class="formatHeader">Day Planner</h2>
                             <p class="formatHidden" id="box1">Plan your day with this application. Save and store your
                                 tasks. It's easy to see what hour you're in
@@ -174,7 +174,7 @@
                     <a href="https://syackzan.github.io/Code-Generator-v1/"
                         style="margin: 10px; text-decoration: none; width: 100%">
                         <section class="mainBorder formatSection">
-                            <img class="formatImage" src=".\assets\images\codeGenerator.png">
+                            <img class="formatImage" src=".\assets\images\codeGenerator.png" alt="Code Generator Image">
                             <h2 class="formatHeader">Code Quiz</h2>
                             <p class="formatHidden" id="box1">Quickly generate a code between 8-129 digits long. Include
                                 Upper & Lowercase letters, Numbers, and
@@ -193,7 +193,7 @@
                     <a href="https://guarded-retreat-79950.herokuapp.com/"
                         style="margin: 10px; text-decoration: none; width: 100%">
                         <section class="mainBorder formatSection">
-                            <img class="formatImage" src=".\assets\images\notetaker.png">
+                            <img class="formatImage" src=".\assets\images\notetaker.png" alt="Notetaker Image">
                             <h2 class="formatHeader">Note Taker</h2>
                             <p class="formatHidden" id="box1">Keep Track of your To-Dos with this application</p>
                         </section>
@@ -205,7 +205,7 @@
                     <a href="https://www.youtube.com/watch?v=7UEdc37f40I"
                         style="margin: 10px; text-decoration: none; width: 100%">
                         <section class="mainBorder formatSection">
-                            <img class="formatImage" src=".\assets\images\ecommerce.png">
+                            <img class="formatImage" src=".\assets\images\ecommerce.png" alt="ecommerce Image">
                             <h2 class="formatHeader">E-commerce Back End</h2>
                             <p class="formatHidden" id="box1">An application displaying proper Route Functions</p>
                         </section>
@@ -217,7 +217,7 @@
                     <a href="https://www.youtube.com/watch?v=KaOJYunXeBo"
                         style="margin: 10px; text-decoration: none; width: 100%">
                         <section class="mainBorder formatSection">
-                            <img class="formatImage" src=".\assets\images\teamprofile.png">
+                            <img class="formatImage" src=".\assets\images\teamprofile.png" alt="Team Profile Generator Image">
                             <h2 class="formatHeader">Team Generator</h2>
                             <p class="formatHidden" id="box1">An application allowing a user to generate their team onto
                                 a profile page</p>
@@ -230,7 +230,7 @@
                     <a href="https://www.youtube.com/watch?v=cC1MKmIArhY"
                         style="margin: 10px; text-decoration: none; width: 100%">
                         <section class="mainBorder formatSection">
-                            <img class="formatImage" src=".\assets\images\employeetracker.png">
+                            <img class="formatImage" src=".\assets\images\employeetracker.png" alt="Employee Tracker Image">
                             <h2 class="formatHeader">Employee Tracker</h2>
                             <p class="formatHidden" id="box1">An application to keep track of your employees, roles, and
                                 departments!</p>
