Updated ReadMe with new updated website photo - fixed from grammar and spelling errors in About Me...

--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
                 <ul id="ulstyle">
                     <li>
                         <b>Knowledge: </b>I am well versed in several programmer languages ranging from C++, HTML, CSS,
-                        Javascript, Jquery, node.js, mySql, Sequelize, Handlebars, Bcrypt, Moment.js, Bootstrap, node.js, express.
+                        Javascript, Jquery, node.js, mySql, Sequelize, Handlebars, Bcrypt, Moment.js, Bootstrap, node.js, and express.
                     </li>
                     <li>
                         <b>Communication: </b> I pride myself on communication. My phone is my office. Expect a return
                         call or text within 15 minutes if I'm your programmer.
                     </li>
                     <li>
-                        <b>Management: </b>People are the secrete ingrediant. Most people think management is about
-                        telling others what to do when infact a manager's role is simply support for the team.
+                        <b>Management: </b>People are the secret ingredient. Most people think management is about
+                        telling others what to do when in fact a manager's role is simply support for the team.
                     </li>
                     <li>
                         <b>Speed: </b>Less about speed and more about efficiency.
                     </li>
                     <li>
-                        <b>Team Player: </b>Ever since I was a little kid I've always enjoyed playing team sports over
+                        <b>Team Player: </b>Ever since I was a little kid, I've always enjoyed playing team sports over
                         solo. It feels better when everyone wins together.
                     </li>
                     <li>
