Add more verbiage to about me section

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         <div>
             <a class="liMargin" href="#aboutme">Bio</a>
             <a class="liMargin" href="#portfolio">Portfolio</a>
-            <a class="liMargin" href="#contactme">Contact Me</a>
-            <a class="liMargin" href="./assets/pdf/syCR.pdf">Resume</a>
+            <a class="liMargin" href="./assets/pdf/resume.pdf">Resume</a>
         </div>
     </div>
 
@@ -65,6 +64,7 @@
                     </li>
                     <br>
                 </ul>
+                <p>My Email, Github, & LinkedIn are all located on the Footer if you would like to see more or get in contact with me.</p>
                 <p>
                     <b>Have a wonderful Day!</b>
                 </p>
@@ -82,7 +82,7 @@
 
     <div class="jumbotron aboutMe" id="jumbo2">
         <section class="header2">
-            <h2 class="headerBox" id="aboutme">Full Stack Programs (React/mongoose/graphql)</h2>
+            <h2 class="headerBox" id="aboutme">Full Stack Programs</h2>
         </section>
         <div class="row d-flex flex-wrap">
             <div class="col-md-6 columnDiv">
@@ -127,13 +127,11 @@
                 </div>
                 <div class="col-md-6 columnDiv">
                     <div class="order">
-                        <a href="https://cryptic-sands-14911.herokuapp.com/"
+                        <a href="#"
                             style="margin: 10px; text-decoration: none; width: 100%">
                             <section class="mainBorder formatSection bigger">
-                                <img class="formatImage" src=".\assets\images\techblog.png" alt="techBlog Image">
-                                <h2 class="formatHeader">Tech Blog</h2>
-                                <p class="formatHidden" id="box1">Link up with like minded coders. Post your Blog & let
-                                    people comment while you help others aswell!</p>
+                                <img class="formatImage" src=".\assets\images\placeHolder2.jpg" alt="techBlog Image">
+                                <h2 class="formatHeader">Coming Soon!</h2>
                             </section>
                         </a>
                     </div>
